<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ComprarActivity"
    android:padding="16dp">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/gyozas"
                android:textColor="@color/colorEdit"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivImagen"
                android:layout_width="245dp"
                android:layout_height="140dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/infGyozas"
                    android:textAlignment="center"
                    android:textColor="@color/colorTexto"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/precioGyo"
                    android:textAlignment="center"
                    android:textColor="@color/colorEdit"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnTarj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#004aad"
                        android:fontFamily="sans-serif"
                        android:text="@string/btnTarjeta"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/btnEfec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#004aad"
                        android:fontFamily="sans-serif"
                        android:text="@string/btnEfectivo"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>


</LinearLayout>