<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivUser1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/user" />

                <TextView
                    android:id="@+id/tvUser1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="11dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/user1"
                    android:textSize="20dp"
                    android:textColor="@color/colorTexto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRestaurante"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/japones"
                    android:textSize="18dp"
                    android:textColor="@color/colorTexto"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvValoracion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorTexto"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>


</LinearLayout>